[gd_scene load_steps=5 format=3 uid="uid://e8xfwq5j4g1b"]

[ext_resource type="FontFile" uid="uid://chh7uru3behv6" path="res://ui/gba.ttf" id="1_dao1w"]
[ext_resource type="Script" path="res://ui/healthbar/healthbar.gd" id="1_jbg1p"]
[ext_resource type="Texture2D" uid="uid://bdrmyw0jddcr6" path="res://ui/healthbar/mana.png" id="3_o6sy8"]
[ext_resource type="Texture2D" uid="uid://cu5vektr5u0ow" path="res://ui/damage_types.png" id="4_6bdwr"]

[node name="healthbar" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jbg1p")

[node name="name_label" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 160.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dao1w")
theme_override_font_sizes/font_size = 16
text = "FRESHBREAD"

[node name="level_label" type="Label" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 6.0
offset_right = 195.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dao1w")
theme_override_font_sizes/font_size = 8
text = "L99"
horizontal_alignment = 2

[node name="health" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="health_amount" type="Label" parent="health"]
layout_mode = 0
offset_left = 139.0
offset_top = 15.0
offset_right = 227.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dao1w")
theme_override_font_sizes/font_size = 8
text = "100/100"

[node name="ColorRect3" type="ColorRect" parent="health"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 37.0
offset_bottom = 24.0
color = Color(0, 0, 0, 1)

[node name="health_label" type="Label" parent="health"]
layout_mode = 0
offset_left = 13.0
offset_top = 16.0
offset_right = 101.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.941176, 0.815686, 0.470588, 1)
theme_override_fonts/font = ExtResource("1_dao1w")
theme_override_font_sizes/font_size = 8
text = "HP:"

[node name="healthbar" type="ColorRect" parent="health"]
layout_mode = 0
offset_left = 37.0
offset_top = 17.0
offset_right = 133.0
offset_bottom = 21.0
color = Color(0, 0.721569, 0, 1)

[node name="ColorRect" type="ColorRect" parent="health"]
layout_mode = 0
offset_left = 133.0
offset_top = 14.0
offset_right = 136.0
offset_bottom = 24.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="health"]
layout_mode = 0
offset_left = 37.0
offset_top = 22.0
offset_right = 133.0
offset_bottom = 24.0
color = Color(0, 0, 0, 1)

[node name="manabar" type="Control" parent="."]
anchors_preset = 0
offset_left = 130.0
offset_right = 170.0
offset_bottom = 40.0

[node name="0" type="Sprite2D" parent="manabar"]
position = Vector2(8, -16)
scale = Vector2(2, 2)
texture = ExtResource("3_o6sy8")
hframes = 3

[node name="0" type="Sprite2D" parent="manabar/0"]
texture = ExtResource("3_o6sy8")
centered = false
offset = Vector2(-4, -4)
region_enabled = true
region_rect = Rect2(16, 0, 8, 8)

[node name="1" type="Sprite2D" parent="manabar"]
position = Vector2(32, -16)
scale = Vector2(2, 2)
texture = ExtResource("3_o6sy8")
hframes = 3

[node name="1" type="Sprite2D" parent="manabar/1"]
texture = ExtResource("3_o6sy8")
centered = false
offset = Vector2(-4, -4)
region_enabled = true
region_rect = Rect2(16, 0, 8, 8)

[node name="2" type="Sprite2D" parent="manabar"]
position = Vector2(56, -16)
scale = Vector2(2, 2)
texture = ExtResource("3_o6sy8")
hframes = 3

[node name="2" type="Sprite2D" parent="manabar/2"]
texture = ExtResource("3_o6sy8")
centered = false
offset = Vector2(-4, -4)
region_enabled = true
region_rect = Rect2(16, 0, 8, 8)

[node name="conditions" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 96.0
offset_bottom = 40.0

[node name="Control" type="Control" parent="conditions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Sprite2D" type="Sprite2D" parent="conditions/Control"]
position = Vector2(10, -17)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_6bdwr")
hframes = 3
